crates/vize_musea/src/transform/to_csf/snapshots/vize_musea__transform__to_csf__tests__transform_multiple_variants.snap
---
source: crates/vize_musea/src/transform/to_csf/tests.rs
expression: csf
---
CsfOutput {
    code: "import type { Meta, StoryObj } from '@storybook/vue3';\nimport __museaComponent from './Button.vue';\n\nconst __museaMeta: Meta<typeof __museaComponent> = {\n  title: 'Button',\n  component: __museaComponent,\n  tags: ['autodocs'],\n};\n\nexport default __museaMeta;\ntype __MuseaStory = StoryObj<typeof __museaMeta>;\n\nexport const Primary: __MuseaStory = {\n  render: (args) => ({\n    components: { __museaComponent, Component: __museaComponent, Button: __museaComponent },\n    setup() {\n      return { args };\n    },\n    template: `<Button variant=\"primary\">Primary</Button>`,\n  }),\n};\n\nexport const Secondary: __MuseaStory = {\n  render: (args) => ({\n    components: { __museaComponent, Component: __museaComponent, Button: __museaComponent },\n    setup() {\n      return { args };\n    },\n    template: `<Button variant=\"secondary\">Secondary</Button>`,\n  }),\n};\n\n",
    filename: ".stories.ts",
}
